typescript/checker/tests/pass/import-circular/index.ts
import { A } from "./a";
import { B } from "./b";
