typescript/checker/tests/errors/import-wrong-interface/index.ts
import { Foo } from "./foo";

let a: Foo = {};
